@@ -317,6 +317,7 @@ modem::modem(const char* name, uart_port_t uartnum, int baud, int rxpin, int txp
   m_gps_usermode = GUM_DEFAULT;
   m_gps_parkpause = 0;
   m_gps_stopticker = 0;
+  m_gps_startticker = 0;
   m_mux = NULL;
   m_ppp = NULL;
   m_driver = NULL;
@@ -332,6 +333,8 @@ modem::modem(const char* name, uart_port_t uartnum, int baud, int rxpin, int txp
   MyEvents.RegisterEvent(TAG, "system.shuttingdown", std::bind(&modem::EventListener, this, _1, _2));
   MyEvents.RegisterEvent(TAG, "vehicle.on", std::bind(&modem::EventListener, this, _1, _2));
   MyEvents.RegisterEvent(TAG, "vehicle.off", std::bind(&modem::EventListener, this, _1, _2));
+  MyEvents.RegisterEvent(TAG, "system.modem.gpsstop", std::bind(&modem::EventListener, this, _1, _2));
+  MyEvents.RegisterEvent(TAG, "system.modem.gotgps", std::bind(&modem::EventListener, this, _1, _2));
   MyEvents.RegisterEvent(TAG, "config.mounted", std::bind(&modem::ConfigChanged, this, _1, _2));
   MyEvents.RegisterEvent(TAG, "config.changed", std::bind(&modem::ConfigChanged, this, _1, _2));
   ConfigChanged("config.mounted", NULL);
@@ -1590,6 +1593,20 @@ void modem::Ticker(std::string event, void* data)
     ESP_LOGI(TAG, "Scheduled GPS stop");
     StopNMEA();
     }
+
+  // GPS reactivation:
+  if (m_gps_startticker > 0 && --m_gps_startticker == 0)
+    {
+    if (!m_nmea && m_gps_enabled && m_gps_usermode == GUM_DEFAULT)
+      {
+      ESP_LOGI(TAG, "Scheduled GPS start");
+      StartNMEA();
+      }
+    else
+      {
+      ESP_LOGI(TAG, "GPS reactivation requested, but not enabled or in user mode");
+      }
+    }
   }
 
 void modem::EventListener(std::string event, void* data)
@@ -1619,6 +1636,23 @@ void modem::EventListener(std::string event, void* data)
       m_gps_stopticker = m_gps_parkpause;
       }
     }
+  else if (event == "system.modem.gpsstop")
+    {
+    if (m_gps_enabled && m_gps_usermode == GUM_DEFAULT && StdMetrics.ms_v_env_on->AsBool() == false)
+      {
+      ESP_LOGI(TAG, "GPS stopped by GPS pause system, restarting in %d minutes", m_gps_reactivate);
+      m_gps_startticker = m_gps_reactivate * 60; // convert minutes to seconds
+      }    
+    }
+  else if (event == "system.modem.gotgps")
+    {
+    if (m_nmea && m_gps_enabled && m_gps_usermode == GUM_DEFAULT && m_gps_parkpause > 0 && StdMetrics.ms_v_env_on->AsBool() == false)
+      {
+      m_gps_stopticker = m_gps_reactlock * 60; // default 5 minutes
+      ESP_LOGI(TAG, "GPS got fix, scheduling GPS stop in %d seconds", m_gps_stopticker);
+      }
+      
+    }
   }
 
 void modem::ConfigChanged(std::string event, void* data)
@@ -1629,11 +1663,15 @@ void modem::ConfigChanged(std::string event, void* data)
     {
     bool enable_gps = MyConfig.GetParamValueBool("modem", "enable.gps", false);
     int gps_parkpause = MyConfig.GetParamValueInt("modem", "gps.parkpause", 0);
+    int gps_reactivate = MyConfig.GetParamValueInt("modem", "gps.reactivate", 0);
+    int gps_reactlock = MyConfig.GetParamValueInt("modem", "gps.reactlock", 5);
     if (event == "config.mounted")
       {
       // Init:
       m_gps_enabled = enable_gps;
       m_gps_parkpause = gps_parkpause;
+      m_gps_reactivate = gps_reactivate;
+      m_gps_reactlock = gps_reactlock;
       }
     else if (enable_gps != m_gps_enabled || gps_parkpause != m_gps_parkpause)
       {
@@ -1641,6 +1679,8 @@ void modem::ConfigChanged(std::string event, void* data)
       m_gps_usermode = GUM_DEFAULT;
       m_gps_enabled = enable_gps;
       m_gps_parkpause = gps_parkpause;
+      m_gps_reactivate = gps_reactivate;
+      m_gps_reactlock = gps_reactlock;
       if (!m_nmea && GPS_SHALL_START())
         StartNMEA();
       else if (m_nmea && GPS_SHALL_STOP())
