@@ -880,7 +880,7 @@ void OvmsWebServer::HandleCfgVehicle(PageEntry_t& p, PageContext_t& c)
  */
 void OvmsWebServer::HandleCfgModem(PageEntry_t& p, PageContext_t& c)
 {
-  std::string apn, apn_user, apn_pass, network_dns, pincode, error, gps_parkpause;
+  std::string apn, apn_user, apn_pass, network_dns, pincode, error, gps_parkpause, gps_parkreactivate, gps_parkreactlock;
   bool enable_gps, enable_gpstime, enable_net, enable_sms, wrongpincode;
   float cfg_sq_good, cfg_sq_bad;
 
@@ -896,6 +896,8 @@ void OvmsWebServer::HandleCfgModem(PageEntry_t& p, PageContext_t& c)
     enable_gps = (c.getvar("enable_gps") == "yes");
     enable_gpstime = (c.getvar("enable_gpstime") == "yes");
     gps_parkpause = c.getvar("gps_parkpause");
+    gps_parkreactivate = c.getvar("gps_parkreactivate");
+    gps_parkreactlock = c.getvar("gps_parkreactlock");
     cfg_sq_good = atof(c.getvar("cfg_sq_good").c_str());
     cfg_sq_bad = atof(c.getvar("cfg_sq_bad").c_str());
 
@@ -920,7 +922,8 @@ void OvmsWebServer::HandleCfgModem(PageEntry_t& p, PageContext_t& c)
       MyConfig.SetParamValueBool("modem", "enable.gps", enable_gps);
       MyConfig.SetParamValueBool("modem", "enable.gpstime", enable_gpstime);
       MyConfig.SetParamValue("modem", "gps.parkpause", gps_parkpause);
-
+      MyConfig.SetParamValue("modem", "gps.parkreactivate", gps_parkreactivate);
+      MyConfig.SetParamValue("modem", "gps.parkreactlock", gps_parkreactlock);
       MyConfig.SetParamValueFloat("network", "modem.sq.good", cfg_sq_good);
       MyConfig.SetParamValueFloat("network", "modem.sq.bad", cfg_sq_bad);
     }
@@ -953,7 +956,9 @@ void OvmsWebServer::HandleCfgModem(PageEntry_t& p, PageContext_t& c)
   enable_sms = MyConfig.GetParamValueBool("modem", "enable.sms", true);
   enable_gps = MyConfig.GetParamValueBool("modem", "enable.gps", false);
   enable_gpstime = MyConfig.GetParamValueBool("modem", "enable.gpstime", false);
-  gps_parkpause = MyConfig.GetParamValue("modem", "gps.parkpause");
+  gps_parkpause = MyConfig.GetParamValue("modem", "gps.parkpause","0");
+  gps_parkreactivate = MyConfig.GetParamValue("modem", "gps.parkreactivate","0");
+  gps_parkreactlock = MyConfig.GetParamValue("modem", "gps.parkreactlock","5");
   cfg_sq_good = MyConfig.GetParamValueFloat("network", "modem.sq.good", -93);
   cfg_sq_bad = MyConfig.GetParamValueFloat("network", "modem.sq.bad", -95);
 
@@ -1007,6 +1012,12 @@ void OvmsWebServer::HandleCfgModem(PageEntry_t& p, PageContext_t& c)
     " <a target=\"_blank\" href=\"https://docs.openvehicles.com/en/latest/userguide/warnings.html#average-power-usage\">user manual</a>"
     " for details.</p>",
     "min=\"0\" step=\"5\"", "Seconds");
+  c.input("number", "GPS park re-activate", "gps_parkreactivate", gps_parkreactivate.c_str(), "Default: 0 = disabled",
+    "<p>Auto re-activate GPS after parking for longer than this time / 0 = no auto re-activation</p>",
+    "min=\"0\" step=\"5\"", "Minutes");
+  c.input("number", "GPS lock time", "gps_parkreactlock", gps_parkreactlock.c_str(), "Default: 5",
+    "<p>by default, GPS lock for 5 minutes until automatic shutdown during parking time</p>",
+    "min=\"5\" step=\"1\"", "Minutes");
   c.fieldset_end();
 
   c.fieldset_start("Cellular client options");
